// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component - AvatarHeader renders correctly 1`] = `
<Box
  className="makeStyles-background-1"
>
  <CircularProgress />
</Box>
`;

exports[`Component - AvatarHeader renders correctly 2`] = `
<Box
  className="makeStyles-background-1"
>
  <Avatar
    imgSrc="some-url"
    name="Tom Hanks"
    progress={54}
    role="front-end"
  />
</Box>
`;
